[package]
name = "lm75"
version = "0.2.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/lm75-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the LM75 temperature sensor and thermal watchdog."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/lm75-rs"
documentation = "https://docs.rs/lm75"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2", optional = true }
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.9"

[profile.release]
lto = true

[features]
default = ["synch"]
synch = ["dep:embedded-hal"]
asynch = ["dep:embedded-hal-async"]
